added SugarORM and simple onboarding

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name">Wind Chime</string>
+    <string name="app_name">Chime</string>
     <string name="title_home">Home</string>
+    <string name="title_nearby">Nearby</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
 </resources>
